--- a/adopt.html
+++ b/adopt.html
@@ -8,10 +8,21 @@
 
   <h1>Available Pets & Fees</h1>
 
-  <p>This page will list adoptable pets and basic fee information.</p>
+  <p>
+    Below is basic information on pets ready for adoption. Fees help cover vaccinations,
+    microchipping, and basic care. Please verify details during your visit.
+  </p>
+
+  <h2>What to Bring</h2>
+  <ul>
+    <li>Photo ID</li>
+    <li>Proof of residence</li>
+    <li>Carrier or leash for safe transport</li>
+  </ul>
 
   <p>
-    <a href="index.html">Back to Home</a>
+    <a href="index.html">Back to Home</a> |
+    <a href="https://en.wikipedia.org/wiki/Animal_shelter" target="_blank">Learn about animal shelters</a>
   </p>
 
 </body>
