--- a/index.html
+++ b/index.html
@@ -8,11 +8,39 @@
 
   <h1>Happy Paws Adoption Center</h1>
 
-  <p>Welcome! This mini site helps our community learn about pet adoption.</p>
-
   <p>
-    <a href="index.html">Home</a> |
-    <a href="adopt.html">Available Pets & Fees</a>
+    <img src="images/logo.png" alt="Happy Paws Logo" width="120">
+  </p>
+  <p>
+    <img src="images/pet1.jpg" alt="Cats and dogs waiting for adoption" width="500">
+  </p>
+
+  <h2>About Our Center</h2>
+  <p>
+    We help match loving families with adoptable pets in our community. Learn about our process,
+    adoption fees, and how you can volunteer or donate.
+  </p>
+
+  <h3>What You’ll Find Here</h3>
+  <ul>
+    <li>Friendly adoption counselors</li>
+    <li>Vaccinated and microchipped pets</li>
+    <li>Resources for new pet parents</li>
+  </ul>
+
+  <h3>How Adoption Works</h3>
+  <ol>
+    <li>Browse our available pets.</li>
+    <li>Complete an application.</li>
+    <li>Meet and greet at our center.</li>
+    <li>Finalize paperwork and take your new friend home!</li>
+  </ol>
+
+  <h3>Links</h3>
+  <p>
+    <a href="adopt.html">See Available Pets & Fees</a> |
+    <a href="https://en.wikipedia.org/wiki/Animal_rescue_group" target="_blank">What is animal rescue?</a> |
+    <a href="mailto:info@happypaws.org">Email Us</a>
   </p>
 
 </body>
