--- a/adopt.html
+++ b/adopt.html
@@ -13,6 +13,45 @@
     microchipping, and basic care. Please verify details during your visit.
   </p>
 
+  <table border="1">
+    <caption>Adoptable Pets (Sample Data)</caption>
+    <tr>
+      <th>Name</th>
+      <th>Species</th>
+      <th>Age</th>
+      <th>Size</th>
+      <th>Adoption Fee</th>
+    </tr>
+    <tr>
+      <td>Bella</td>
+      <td>Dog</td>
+      <td>2 years</td>
+      <td>Medium</td>
+      <td>$120</td>
+    </tr>
+    <tr>
+      <td>Milo</td>
+      <td>Cat</td>
+      <td>1 year</td>
+      <td>Small</td>
+      <td>$80</td>
+    </tr>
+    <tr>
+      <td>Luna</td>
+      <td>Dog</td>
+      <td>3 years</td>
+      <td>Large</td>
+      <td>$150</td>
+    </tr>
+    <tr>
+      <td>Nori</td>
+      <td>Cat</td>
+      <td>6 months</td>
+      <td>Small</td>
+      <td>$70</td>
+    </tr>
+  </table>
+
   <h2>What to Bring</h2>
   <ul>
     <li>Photo ID</li>
