--- a/adopt.html
+++ b/adopt.html
@@ -5,6 +5,11 @@
   <title>Available Pets & Fees</title>
 </head>
 <body>
+     <p>
+    <a href="index.html">Home</a> |
+    <a href="adopt.html">Available Pets & Fees</a> |
+    <a href="contact.html">Contact</a>
+  </p>
 
   <h1>Available Pets & Fees</h1>
 
