--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Happy Paws Adoption Center</title>
 </head>
 <body>
+     <p>
+    <a href="index.html">Home</a> |
+    <a href="adopt.html">Available Pets & Fees</a> |
+    <a href="contact.html">Contact</a>
+  </p>
 
   <h1>Happy Paws Adoption Center</h1>
 
