base styles & typography

--- a/adopt.html
+++ b/adopt.html
@@ -5,6 +5,7 @@
   <title>Available Pets & Fees</title>
 </head>
 <body>
+  <link rel="stylesheet" href="style.css">
      <p>
     <a href="index.html">Home</a> |
     <a href="adopt.html">Available Pets & Fees</a> |
