--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
   <title>Contact Happy Paws</title>
 </head>
 <body>
-
-  <!-- Simple site nav linking all three pages -->
+<link rel="stylesheet" href="style.css">
   <p>
     <a href="index.html">Home</a> |
     <a href="adopt.html">Available Pets & Fees</a> |
