--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Happy Paws Adoption Center</title>
 </head>
 <body>
+  <link rel="stylesheet" href="style.css">
      <p>
     <a href="index.html">Home</a> |
     <a href="adopt.html">Available Pets & Fees</a> |
